--- a/src/style.css
+++ b/src/style.css
@@ -21,16 +21,16 @@
   flex-direction: column;
 
   outline: solid 5px var(--primary-color);
+  color: var(--primary-color);
 }
 #top3 h2 {
   max-width: 10em;
   margin: 1em;
-  color: var(--primary-color);
 }
 #top3 h3 {
   background-color: var(--secondary-color);
   outline: solid 2px var(--primary-color);
-  color: var(--primary-color);
+  
 
   -webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
   -moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
@@ -48,7 +48,6 @@
   max-width: 10em;
   background-color: var(--secondary-color);
   outline: solid 2px var(--primary-color);
-  color: var(--primary-color);
 
   -webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
   -moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
@@ -81,6 +80,8 @@
         display : flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
+        gap: 5em;
     }
     #top3 h2 {
         max-width: 6em;
