feat move index.html

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,49 @@
 *{
 margin: 0;
 padding: 0;
-outline: solid 1px red;
+/* outline: solid 1px red; */
 }
+
+:root{
+    --primary-color: #125b89;
+    --secondary-color: #FFF6EC;
+    --accent-color: #D0E7F6;
+}
+
+
+.card-restaurant{
+    border: solid 3px var(--primary-color);
+    display: flex;
+    border-radius: 2em;
+    padding: 0.5em;
+    margin: 1em auto;
+    gap: 1.75em;
+    align-items: center; 
+    justify-content: center;
+    width: 80%;
+    height: auto;
+    background-color: var(--secondary-color);
+}
+
+.card-restaurant ul li{
+    /* list-style: none; */
+}
+
+.informations-restaurant{
+    display:flex;
+    flex-direction: column;
+}
+
+.picture-restaurant{
+    border-radius: 4em;
+    width: 40%;
+}
+
+#card-name{
+    margin: 0 0.5em 1em 0.5em;
+    border-radius: 0.5em;
+    background-color: var(--primary-color);
+    color: white;
+    text-align: center;
+}
+
