--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,9 @@ outline: solid 1px red;
     background-color: var(--secondary-color);
 }
 
-.card-restaurant ul li{
-    /* list-style: none; */
+.card-restaurant ul{
+    display:flex;
+    gap:0.25em;
 }
 
 .informations-restaurant{
@@ -41,7 +42,7 @@ outline: solid 1px red;
     width: 40%;
 }
 
-#card-name{
+.card-name{
     margin: 0 0.5em 1em 0.5em;
     border-radius: 0.5em;
     background-color: var(--primary-color);
