--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,8 @@ padding: 0;
 outline: solid 1px red;
 }
 
+/* Filtrer un restaurant */
+
 details {
     border: solid 0.3rem var(--primary-color);
     width: 90%;
@@ -21,6 +23,119 @@ details {
     margin-bottom: 50%;
     border-radius: 2rem;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 3%;    
+}
+
+fieldset {
+    display: flex;
+    flex-direction: column;
+    border: none;
+    list-style: none;
+}
+
+#filter-restaurants {
+    background-color: var(--secondary-color);
+    width: 80%;
+}
+
+
+
+summary {
+    text-align: center;
+    font-size: calc(var(--subtitle-size) * 1.2);
+    background-color: var(--primary-color);
+    margin: 2rem 12.5% 2rem 12.5%;
+    padding: 1rem 0;
+    width: 75%;
+    border-radius: 2rem;
+    color: var(--secondary-color);
+}
+
+.ul-liste {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+
+.title-filter {
+    margin: 1.5rem 0 0.7rem 0;
+    padding: 1rem 0;
+    text-align: center;
+    font-size: calc(var(--subtitle-size) * 0.8);
+    background-color: #125b89;
+    color: var(--secondary-color);
+    border-radius: 5rem;    
+}
+
+#validate-filter {
+    margin: 3rem 25% 3rem 20%;
+    padding: 7% 5%;
+    width: 60%;
+    border-style: none;
+    border-radius: 1rem;
+    font-size: var(--pargaraph-size);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+
+.li-form {
+    list-style: none;
+    font-size: var(--pargaraph-size);
+}
+
+/* Ajouter un restaurant */
+
+#add-restaurant {
+    width: 80%;
+    margin: 5% 5%;
+    border: solid 0.3rem var(--primary-color);
+    border-radius: 1rem;
+    background-color: var(--accent-color);
+}
+
+#title-form {
+    margin: 1rem 0 3rem 0;
+    text-align: center;
+    font-size: var(--subtitle-size);
+}
+
+.title-form {
+    display: inline-block;
+    margin: 0.3rem 5rem 0.3rem 0.3rem;
+}
+
+
+
+.input-formulaire {
+    width: 90%;
+    height: var(--pargaraph-size);
+    background-color: var(--secondary-color);
+}
+
+#validate-form {
+    margin: 1.5rem 0 1.5rem 25%;
+    padding: 5% 3%;
+    width: 50%;
+    border-style: none;
+    border: solid 0.3rem var(--primary-color);
+    border-radius: 1rem;
+    font-size: var(--pargaraph-size);
+    background-color: var(--secondary-color);
+    
+    @media screen and (min-width: 992px){
+        margin: 1.5rem 0 1.5rem 0;
+        width: 20%;
+        padding: 1rem 0;
+    }
+}
+
+/* Cartes et descriptions des restaurants */
 
 .card-restaurant{
     border: solid 3px var(--primary-color);
@@ -58,108 +173,3 @@ details {
     color: white;
     text-align: center;
 }
-
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 3%;    
-}
-
-fieldset {
-    display: flex;
-    flex-direction: column;
-    border: none;
-}
-
-#filter-restaurants {
-    background-color: var(--secondary-color);
-    width: 80%;
-}
-
-.liste {
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
-}
-
-summary {
-    text-align: center;
-    font-size: var(--subtitle-size);
-    background-color: var(--primary-color);
-    margin: 2rem 1rem 2rem 1rem;
-    padding: 1rem 0;
-    border-radius: 2rem;
-    color: var(--secondary-color);
-}
-
-.title-filtre {
-    margin: 1.5rem 0 0.7rem 0;
-    padding: 1rem 0;
-    text-align: center;
-    font-size: calc(var(--pargaraph-size) * 1.2);
-    background-color: #125b89;
-    color: var(--secondary-color);
-    border-radius: 5rem;    
-}
-
-#add-restaurant {
-    width: 80%;
-    margin: 5% 5%;
-    border: solid 0.3rem var(--primary-color);
-    border-radius: 1rem;
-    background-color: var(--accent-color);
-}
-
-#title-form {
-    margin: 1rem 0 3rem 0;
-    text-align: center;
-    font-size: var(--subtitle-size);
-}
-
-.li-form {
-    display: inline-block;
-    margin: 0.3rem 5rem 0.3rem 0.3rem;
-}
-
-li {
-    list-style: none;
-    font-size: var(--pargaraph-size);
-}
-
-.input-formulaire {
-    width: 90%;
-    height: var(--pargaraph-size);
-    background-color: var(--secondary-color);
-}
-
-#validate-filter {
-    margin: 3rem 25% 3rem 20%;
-    padding: 10% 5%;
-    width: 60%;
-    border-style: none;
-    border-radius: 1rem;
-    font-size: var(--pargaraph-size);
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
-}
-
-#validate-form {
-    margin: 1.5rem 0 1.5rem 25%;
-    padding: 1rem 0;
-    width: 50%;
-    border-style: none;
-    border: solid 0.3rem var(--primary-color);
-    border-radius: 1rem;
-    font-size: var(--pargaraph-size);
-    background-color: var(--secondary-color);
-    
-    @media screen and (min-width: 992px){
-        margin: 1.5rem 0 1.5rem 0;
-        width: 20%;
-        padding: 1rem 0;
-    }
-}
-
-
