--- a/src/style.css
+++ b/src/style.css
@@ -1,340 +1,316 @@
 :root {
-  --primary-color: #125b89;
-  --secondary-color: #fff6ec;
-  --accent-color: #d0e7f6;
-  --title-size: 3rem;
-  --subtitle-size: 1.8rem;
-  --pargaraph-size: 1.3rem;
+	--primary-color: #125b89;
+	--secondary-color: #fff6ec;
+	--accent-color: #d0e7f6;
+	--title-size: 3rem;
+	--subtitle-size: 1.8rem;
+	--pargaraph-size: 1.3rem;
 }
 
 @font-face {
-  font-family: "QuickSand";
-  src: url("../public/Quicksand/Quicksand-VariableFont_wght.ttf");
+	font-family: "QuickSand";
+	src: url("../public/Quicksand/Quicksand-VariableFont_wght.ttf");
 }
 @font-face {
-  font-family: "Mulish";
-  src: url("../public/Mulish/Mulish-VariableFont_wght.ttf");
+	font-family: "Mulish";
+	src: url("../public/Mulish/Mulish-VariableFont_wght.ttf");
 }
 
-*{
-margin: 0;
-padding: 0;
-outline: solid 1px red;
+* {
+	margin: 0;
+	padding: 0;
+	outline: solid 1px red;
 }
 
 /* Corp du site */
 
 #main-top {
-    @media screen and (min-width: 992px) {
-        display: flex;
-    }
+	@media screen and (min-width: 992px) {
+		display: flex;
+	}
 }
 
 /* HEADER SECTION TOP 3 */
 
 #top3 {
-  border-radius: 2em;
+	border-radius: 2em;
 
-  margin: 1em 1em;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+	margin: 1em 1em;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 
-  outline: solid 5px var(--primary-color);
-  color: var(--primary-color);
+	outline: solid 5px var(--primary-color);
+	color: var(--primary-color);
 }
 #top3 h2 {
-  text-align: center;
-  font-family: "QuickSand";
+	text-align: center;
+	font-family: "QuickSand";
 }
 #top3 h3 {
-  background-color: var(--secondary-color);
-  outline: solid 2px var(--primary-color);
-  border-radius: 0.3em;
-  font-family: "QuickSand";
+	background-color: var(--secondary-color);
+	outline: solid 2px var(--primary-color);
+	border-radius: 0.3em;
+	font-family: "QuickSand";
 
-  -webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
-  -moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
-  box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	-webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	-moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
 }
 #top3 img {
-  width: 49%;
-  border-radius: 2em;
-  outline: solid 2px var(--primary-color);
-  -webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
-  -moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
-  box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	width: 49%;
+	border-radius: 2em;
+	outline: solid 2px var(--primary-color);
+	-webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	-moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
 }
 #top3 p {
-  background-color: var(--secondary-color);
-  outline: solid 2px var(--primary-color);
-  border-radius: 0.3em;
-  font-family: "Mulish";
+	background-color: var(--secondary-color);
+	outline: solid 2px var(--primary-color);
+	border-radius: 0.3em;
+	font-family: "Mulish";
 
-  -webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
-  -moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
-  box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	-webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	-moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
 }
 
 #top3 article {
-  margin: 1em;
+	margin: 1em;
 }
 .header-text {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
 
-  width: 49%;
+	width: 49%;
 }
 .restaurant1-3 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1em;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 1em;
 }
 #restaurant2 {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  gap: 1em;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: center;
+	gap: 1em;
 }
 
 /* MEDIA QUERIES HEADER */
 
 @media screen and (min-width: 992px) {
-  #top3 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
+	#top3 {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		gap: 1em;
 
-    margin: 2em 2em;
-  }
-  #top3 h2 {
-    font-size: 2em;
-    width: 25%;
-    margin: 0em 1em;
-  }
-  #top3 section {
-    display: flex;
-    flex-direction: row;
-  }
-  #top3 img {
-    margin: 0.2em 0em;
-    width: 45%;
-  }
-  #top3 article {
-    margin: 1em 1em;
-  }
-  #restaurant2 {
-    display: flex;
-    flex-direction: row;
-    width: 40%;
-  }
-  .restaurant1-3 {
-    gap: 1em;
+		margin: 2em 2em;
+	}
+	#top3 h2 {
+		font-size: 2em;
+		width: 25%;
+		margin: 0em 1em;
+	}
+	#top3 section {
+		display: flex;
+		flex-direction: row;
+	}
+	#top3 img {
+		margin: 0.2em 0em;
+		width: 45%;
+	}
+	#top3 article {
+		margin: 1em 1em;
+	}
+	#restaurant2 {
+		display: flex;
+		flex-direction: row;
+		width: 40%;
+	}
+	.restaurant1-3 {
+		gap: 1em;
+		width: 40%;
+		margin: 2em 2em;
+	}
 
-    margin: 2em 2em;
-  }
-  #top3 h2 {
-    font-size: 2em;
-    width: 25%;
-    margin: 0em 1em;
-  }
-  #top3 section {
-    display: flex;
-    flex-direction: row;
-  }
-  #top3 img {
-    margin: 0.2em 0em;
-    width: 45%;
-  }
-  #top3 article {
-    margin: 1em 1em;
-  }
-  #restaurant2 {
-    display: flex;
-    flex-direction: row;
-    width: 40%;
-  }
-  .restaurant1-3 {
-    width: 40%;
-  }
-  .header-text {
-    font-size: 100%;
-    margin: 0em 0.2em;
-  }
+	.header-text {
+		font-size: 100%;
+		margin: 0em 0.2em;
+	}
 }
 
 /* Filtrer un restaurant */
 
 details {
-    border: solid 0.3rem var(--primary-color);
-    width: 90%;
-    background-color: var(--secondary-color);
-    margin: 0 4%;
-    border-radius: 2rem;
-    transition: all 0.5s ease-in-out;
+	border: solid 0.3rem var(--primary-color);
+	width: 90%;
+	background-color: var(--secondary-color);
+	margin: 0 4%;
+	border-radius: 2rem;
+	transition: all 0.5s ease-in-out;
 
-    @media screen and (min-width: 992px){
-        width: 50%;
-        height: 90%;
-        margin: 5% 1%;
-    }
+	@media screen and (min-width: 992px) {
+		width: 50%;
+		height: 90%;
+		margin: 5% 1%;
+	}
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 3%;    
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 3%;
 }
 
 fieldset {
-    display: flex;
-    flex-direction: column;
-    border: none;
-    list-style: none;
+	display: flex;
+	flex-direction: column;
+	border: none;
+	list-style: none;
 }
 
 #filter-restaurants {
-  background-color: var(--secondary-color);
-  width: 80%;
+	background-color: var(--secondary-color);
+	width: 80%;
 }
 
 summary {
-    text-align: center;
-    font-size: calc(var(--subtitle-size) * 1.2);
-    background-color: var(--primary-color);
-    margin: 2rem 12.5% 2rem 12.5%;
-    padding: 1rem 0;
-    width: 75%;
-    border-radius: 2rem;
-    color: var(--secondary-color);
-    transition: all 0.5s ease-in-out;
+	text-align: center;
+	font-size: calc(var(--subtitle-size) * 1.2);
+	background-color: var(--primary-color);
+	margin: 2rem 12.5% 2rem 12.5%;
+	padding: 1rem 0;
+	width: 75%;
+	border-radius: 2rem;
+	color: var(--secondary-color);
+	transition: all 0.5s ease-in-out;
 
-    @media screen and (min-width: 992px){
-        margin: 12.5% 12.5% 12.5% 12.5%;
-    }
+	@media screen and (min-width: 992px) {
+		margin: 12.5% 12.5% 12.5% 12.5%;
+	}
 }
 
 summary:hover {
-    transform: scale(1.1);
+	transform: scale(1.1);
 }
 
-
 .ul-liste {
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.8rem;
 }
 
 .title-filter {
-    margin: 1.5rem 0 0.7rem 0;
-    padding: 1rem 0;
-    text-align: center;
-    font-size: calc(var(--subtitle-size) * 0.8);
-    background-color: #125b89;
-    color: var(--secondary-color);
-    border-radius: 5rem;    
+	margin: 1.5rem 0 0.7rem 0;
+	padding: 1rem 0;
+	text-align: center;
+	font-size: calc(var(--subtitle-size) * 0.8);
+	background-color: #125b89;
+	color: var(--secondary-color);
+	border-radius: 5rem;
 }
 
 #validate-filter {
-    margin: 3rem 25% 3rem 20%;
-    padding: 7% 5%;
-    width: 60%;
-    border-style: none;
-    border-radius: 1rem;
-    font-size: var(--pargaraph-size);
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
-    transition: all 0.5s ease-in-out;
+	margin: 3rem 25% 3rem 20%;
+	padding: 7% 5%;
+	width: 60%;
+	border-style: none;
+	border-radius: 1rem;
+	font-size: var(--pargaraph-size);
+	background-color: var(--primary-color);
+	color: var(--secondary-color);
+	transition: all 0.5s ease-in-out;
 
-    @media screen and (min-width: 992px){
-        margin: 1.5rem 30% 1.5rem 30%;
-        width: 40%;
-        padding: 1rem 0;
-    }
+	@media screen and (min-width: 992px) {
+		margin: 1.5rem 30% 1.5rem 30%;
+		width: 40%;
+		padding: 1rem 0;
+	}
 }
 
 #validate-filter:hover {
-    transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .li-form {
-    list-style: none;
-    font-size: var(--pargaraph-size);
+	list-style: none;
+	font-size: var(--pargaraph-size);
 }
 
 /* Ajouter un restaurant */
 
 #add-restaurant {
-    width: 80%;
-    margin: 5% 5%;
-    border: solid 0.3rem var(--primary-color);
-    border-radius: 1rem;
-    background-color: var(--accent-color);
-    
-    @media screen and (min-width: 992px){
-        width: 91%;
-        margin: 5% 1%;
-    }    
+	width: 80%;
+	margin: 5% 5%;
+	border: solid 0.3rem var(--primary-color);
+	border-radius: 1rem;
+	background-color: var(--accent-color);
+
+	@media screen and (min-width: 992px) {
+		width: 91%;
+		margin: 5% 1%;
+	}
 }
 
 #title-form {
-  margin: 1rem 0 3rem 0;
-  text-align: center;
-  font-size: var(--subtitle-size);
+	margin: 1rem 0 3rem 0;
+	text-align: center;
+	font-size: var(--subtitle-size);
 }
 
 .ul-form {
-    @media screen and (min-width: 992px) {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }    
+	@media screen and (min-width: 992px) {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+	}
 }
 
 .ul-form > li {
-    @media screen and (min-width: 992px) {
-        width: 33%;
-    }
+	@media screen and (min-width: 992px) {
+		width: 33%;
+	}
 }
 .title-form {
-    display: inline-block;
-    margin: 0.3rem 5rem 0.3rem 0.3rem;
+	display: inline-block;
+	margin: 0.3rem 5rem 0.3rem 0.3rem;
 }
 
 .input-formulaire {
-    width: 90%;
-    height: var(--pargaraph-size);
-    background-color: var(--secondary-color);
+	width: 90%;
+	height: var(--pargaraph-size);
+	background-color: var(--secondary-color);
 }
 
 #validate-form {
-    margin: 1.5rem 0 1.5rem 25%;
-    padding: 5% 3%;
-    width: 50%;
-    border-style: none;
-    border: solid 0.3rem var(--primary-color);
-    border-radius: 1rem;
-    font-size: var(--pargaraph-size);
-    background-color: var(--secondary-color);
-    transition: all 0.5s ease-in-out;
-    
-    @media screen and (min-width: 992px){
-        margin: 1.5rem 0 1.5rem 0;
-        width: 20%;
-        padding: 1rem 0;
-    }
+	margin: 1.5rem 0 1.5rem 25%;
+	padding: 5% 3%;
+	width: 50%;
+	border-style: none;
+	border: solid 0.3rem var(--primary-color);
+	border-radius: 1rem;
+	font-size: var(--pargaraph-size);
+	background-color: var(--secondary-color);
+	transition: all 0.5s ease-in-out;
+
+	@media screen and (min-width: 992px) {
+		margin: 1.5rem 0 1.5rem 0;
+		width: 20%;
+		padding: 1rem 0;
+	}
 }
 
 #validate-form:hover {
-    transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 /* Cartes et descriptions des restaurants */
@@ -345,50 +321,49 @@ summary:hover {
 }
 
 .card-restaurant {
-  border: solid 3px var(--primary-color);
-  display: flex;
-  border-radius: 2em;
-  padding: 0.5em;
-  margin: 1em auto;
-  gap: 1.75em;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
-  height: auto;
-  background-color: var(--secondary-color);
+	border: solid 3px var(--primary-color);
+	display: flex;
+	border-radius: 2em;
+	padding: 0.5em;
+	margin: 1em auto;
+	gap: 1.75em;
+	align-items: center;
+	justify-content: center;
+	width: 80%;
+	height: auto;
+	background-color: var(--secondary-color);
 }
 
-.card-restaurant ul {
+/* .card-restaurant ul {
   display: flex;
   gap: 0.25em;
-}
+} */
 
 .informations-restaurant {
-  display: flex;
-  flex-direction: column;
-  gap: 8%;
+	display: flex;
+	flex-direction: column;
+	gap: 8%;
 	width: 100%;
 }
 
 .picture-restaurant {
-  border-radius: 4em;
-  width: 40%;
+	border-radius: 4em;
+	width: 40%;
 }
 
 .card-name {
-  margin: 0 0.5em 1em 0.5em;
-  border-radius: 0.5em;
-  background-color: var(--primary-color);
-  color: white;
-  text-align: center;
+	margin: 0 0.5em 1em 0.5em;
+	border-radius: 0.5em;
+	background-color: var(--primary-color);
+	color: white;
+	text-align: center;
 }
 
 @media screen and (min-width: 992px) {
 	.cards {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		gap: 1em;
-		margin: 0 2em 0 2em;
+		margin: 0 auto 0 auto;
 		align-items: stretch;
-	}
+
 }
