--- a/src/style.css
+++ b/src/style.css
@@ -19,15 +19,34 @@
 * {
 	margin: 0;
 	padding: 0;
-	outline: solid 1px red;
+	/* outline: solid 1px red; */
 }
 
-/* Corp du site */
+/* Corps du site */
 
 #main-top {
 	@media screen and (min-width: 992px) {
 		display: flex;
 	}
+}
+
+/* Bannière */
+
+#banniere {
+	border: solid 50px var(--primary-color);
+	border-right: 6px var(--primary-color);
+	border-left: 6px var(--primary-color);
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	object-fit: cover;
+}
+
+#image-banniere {
+	width: 1640px;
+	height: 150px;
+	object-fit: cover;
 }
 
 /* HEADER SECTION TOP 3 */
@@ -159,7 +178,7 @@ details {
 	@media screen and (min-width: 992px) {
 		width: 50%;
 		height: 90%;
-		margin: 5% 1%;
+		margin: 1% 1%;
 	}
 }
 
@@ -325,29 +344,29 @@ summary:hover {
 	display: flex;
 	border-radius: 2em;
 	padding: 0.5em;
-	margin: 1em auto;
+	margin: 0.5em auto;
 	gap: 1.75em;
 	align-items: center;
 	justify-content: center;
-	width: 80%;
-	height: auto;
+	width: 87%;
+	height: 100%;
 	background-color: var(--secondary-color);
+	-webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	-moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
 }
-
-/* .card-restaurant ul {
-  display: flex;
-  gap: 0.25em;
-} */
 
 .informations-restaurant {
 	display: flex;
 	flex-direction: column;
 	gap: 8%;
 	width: 100%;
+	font-family: "Mulish";
+	font-size: 11px;
 }
 
 .picture-restaurant {
-	border-radius: 4em;
+	border-radius: 2em;
 	width: 40%;
 }
 
@@ -356,7 +375,12 @@ summary:hover {
 	border-radius: 0.5em;
 	background-color: var(--primary-color);
 	color: white;
+	font-size: 14px;
 	text-align: center;
+	font-family: "QuickSand";
+	-webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	-moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+	box-shadow: 1px 2px 2px 0px rgba(122, 118, 122, 1);
 }
 
 @media screen and (min-width: 992px) {
@@ -365,5 +389,35 @@ summary:hover {
 		grid-template-columns: 1fr 1fr;
 		margin: 0 auto 0 auto;
 		align-items: stretch;
+	}
 
+	.card-restaurant {
+		width: 95%;
+		height: auto;
+	}
+
+	.informations-restaurant {
+		font-size: 24px;
+	}
+
+	.card-name {
+		font-size: 26px;
+	}
+}
+
+/* footer */
+
+footer {
+	background-color: var(--primary-color);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 2em 0;
+	height: 10px;
+}
+
+footer span a {
+	text-decoration: none;
+	color: var(--secondary-color);
 }
