--- a/src/style.css
+++ b/src/style.css
@@ -19,10 +19,10 @@
 * {
 	margin: 0;
 	padding: 0;
-	/* outline: solid 1px red; */
+	outline: solid 1px red;
 }
 
-/* Corps du site */
+
 /* Corps du site */
 
 #main-top {
@@ -241,8 +241,12 @@ summary:hover {
 	border-radius: 5rem;
 }
 
+#no-filter {
+	margin-top: 1.5rem;
+}
+
 #validate-filter {
-	margin: 3rem 25% 3rem 20%;
+	margin: 2rem 25% 3rem 20%;
 	padding: 7% 5%;
 	width: 60%;
 	border-style: none;
