fix: fixed 1.0 with height card problems

--- a/src/style.css
+++ b/src/style.css
@@ -487,7 +487,7 @@ summary:hover {
 
   .card-restaurant {
     width: 95%;
-    height: fit-content;
+    height: 85%;
   }
 
   .informations-restaurant {
