--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
 * {
   margin: 0;
   padding: 0;
-  outline: solid 1px red;
+  /* outline: solid 1px red; */
 }
 
 /* Corps du site */
@@ -43,6 +43,7 @@
   justify-content: center;
   object-fit: cover;
 }
+
 #image-banniere {
   width: 100%;
   height: 10em;
@@ -51,8 +52,14 @@
 
 h1 {
   font-family: "QuickSand";
-  margin: 0.5em 0.5em;
+  margin: 0.5em 0.1em;
   color: var(--primary-color);
+  font-size: calc(var(--title-size) * 1.3);
+
+  @media screen and (min-width: 992px) {
+    font-size: calc(var(--title-size) * 2);
+    margin: 0 3rem
+  }
 }
 
 /* HEADER SECTION TOP 3 */
@@ -68,10 +75,12 @@ h1 {
   outline: solid 5px var(--primary-color);
   color: var(--primary-color);
 }
+
 #top3 h2 {
   text-align: center;
   font-family: "QuickSand";
 }
+
 #top3 h3 {
   background-color: var(--secondary-color);
   outline: solid 2px var(--primary-color);
@@ -118,12 +127,23 @@ h1 {
   flex-direction: row;
   align-items: center;
   gap: 1em;
+  transition: all 0.5s ease-in-out;
 }
+
+.restaurant1-3:hover {
+  transform: scale(1.02);
+}
+
 #restaurant2 {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
   gap: 1em;
+  transition: all 0.5s ease-in-out;
+}
+
+#restaurant2:hover {
+  transform: scale(1.02);
 }
 
 /* MEDIA QUERIES HEADER */
@@ -185,7 +205,7 @@ details {
 
   @media screen and (min-width: 992px) {
     width: 50%;
-    height: 90%;
+    height: 5%;
     margin: 1% 1%;
   }
 }
@@ -306,8 +326,7 @@ summary:hover {
 /* Ajouter un restaurant */
 
 #add-restaurant {
-  width: 80%;
-  margin: 5% 5%;
+  margin: 0;
   border: solid 0.3rem var(--primary-color);
   border-radius: 2rem;
   background-color: var(--accent-color);
@@ -315,7 +334,7 @@ summary:hover {
 
   @media screen and (min-width: 992px) {
     width: 91%;
-    margin: 5% 1%;
+    margin: 5% 1% 0 1%;
   }
 }
 
@@ -403,6 +422,11 @@ summary:hover {
   -webkit-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
   -moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
   box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
+  transition: all 0.5s ease-in-out;
+}
+
+.card-restaurant:hover {
+  transform: scale(1.02);
 }
 
 .card-restaurant ul {
@@ -449,6 +473,7 @@ summary:hover {
   .card-restaurant {
     width: 95%;
     height: fit-content;
+    height: 85%;
   }
 
   .informations-restaurant {
@@ -483,6 +508,7 @@ summary:hover {
   -moz-box-shadow: 3px 4px 3px 0px rgba(122, 118, 122, 1);
   box-shadow: 1px 2px 2px 0px rgba(122, 118, 122, 1);
 }
+
 .btnHautdePage:hover {
   transform: scale(1.1);
 }
@@ -490,6 +516,7 @@ summary:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 25% 1% 25%;
 }
 
 /* footer */
